# FastRemap

./: .gitmodules  Dockerfile  Makefile  README.md
evaluation/: plot_runtime.py
src/: CMakeLists.txt  CommandLineParser.h  IntervalTree.h  README  annoGene.cpp  annoGene.h  common.h  main.cpp  mapbam.cpp  mapbam.h  mapbed.cpp  mapbed.h  mapsam.cpp  mapsam.h  mapvcf.cpp  mapvcf.h  utils.cpp  utils.h
test_data/: ce6ToCe10.over.chain  little.sam  little2.bam
validation/: compare_bed.cpp  compare_outputs.py
